# bevy_console

./: .gitignore  Cargo.toml  Makefile  README.md  USAGE.md
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: advanced.rs  basic.rs  bindings.rs  commands.rs  custom_config.rs  gameplay_blocking.rs  persistent_history.rs  resource_properties.rs  states.rs  system_output.rs
src/: args.rs  commands.rs  completion.rs  config.rs  editor.rs  execution.rs  input.rs  lib.rs  logging.rs  model.rs  parser.rs  persistence.rs  registry.rs  resource_properties.rs  scroll.rs  state.rs  state_commands.rs  ui.rs
