[workspace]
members = ["derive"]
resolver = "3"

[package]
name = "chill_bevy_console"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "A configurable developer console plugin for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chillgames-net/bevy_console"
homepage = "https://github.com/Chillgames-net/bevy_console"
documentation = "https://docs.rs/chill_bevy_console"
readme = "README.md"
keywords = ["bevy", "console", "gamedev", "plugin", "dev-tools"]
categories = ["game-development"]
include = [
    "src/**",
    "examples/**",
    "assets/UbuntuMono-R.ttf",
    "assets/screenshots/**",
    "Cargo.toml",
    "README.md",
    "USAGE.md",
]

[package.metadata.docs.rs]
all-features = true

[features]
# Enable every optional console capability.
all = ["embedded-font", "persistent-history", "resource-properties"]
# Embeds assets/UbuntuMono-R.ttf into the binary and uses it as the default font.
embedded-font = []
# Loads and saves command recall history between runs, controlled by
# `ConsolePersistence::history_file`.
persistent-history = []
# Exposes opt-in fields on Bevy resources through the built-in res console
# command. The custom derive is re-exported when this is enabled.
resource-properties = ["dep:chill_bevy_console_derive"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "keyboard",
    "mouse",
    "bevy_log",
    "bevy_ui_widgets",
    "ui_picking",
    "system_clipboard",
] }
chill_bevy_console_derive = { version = "0.3.0", path = "derive", optional = true }

# Examples use DefaultPlugins, which needs bevy's default features (winit, etc.).
[dev-dependencies]
bevy = "0.19"

[[example]]
name = "persistent_history"
required-features = ["persistent-history"]

[[example]]
name = "advanced"
required-features = ["resource-properties"]

[[example]]
name = "resource_properties"
required-features = ["resource-properties"]
