[package]
name = "chill_bevy_console"
version = "0.4.0"
edition = "2024"
rust-version = "1.95"
description = "A configurable developer console plugin for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chillgames-net/bevy_console"
homepage = "https://github.com/Chillgames-net/bevy_console"
documentation = "https://docs.rs/chill_bevy_console"
readme = "README.md"
keywords = ["bevy", "console", "gamedev", "plugin", "dev-tools"]
categories = ["game-development"]
include = [
    "src/**",
    "examples/**",
    "assets/UbuntuMono-R.ttf",
    "assets/screenshots/**",
    "Cargo.toml",
    "README.md",
    "USAGE.md",
]

[package.metadata.docs.rs]
all-features = true

[features]
# Enable every optional console capability.
all = ["embedded-font", "persistent-history"]
# Embeds assets/UbuntuMono-R.ttf into the binary and uses it as the default font.
embedded-font = []
# Loads and saves command recall history between runs, controlled by
# `ConsolePersistence::history_file`.
persistent-history = []

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "keyboard",
    "mouse",
    "bevy_log",
    "bevy_state",
    "bevy_ui_widgets",
    "ui_picking",
    "system_clipboard",
    "reflect_documentation",
] }

# Examples use DefaultPlugins, which needs bevy's default features (winit, etc.).
[dev-dependencies]
bevy = "0.19"

[[example]]
name = "persistent_history"
required-features = ["persistent-history"]
