[package]
name = "chill_bevy_console_derive"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Derive macros for chill_bevy_console"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chillgames-net/bevy_console"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
